fix problem with instant can't map to localDate in Dashboard Stats